add new columns to academic records
add columns to determine encode date and verified date; Will continue on admin/instructor encoding of grades

--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Students/Enroll.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Students/Enroll.cshtml
@@ -4,7 +4,7 @@
 <!-- Enrollment Modal -->
 <div class="modal fade" id="enrollmentModal" tabindex="-1">
     <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable" role="document">
-        <div class="modal-content" style="border-color: brown; border-width: 10px">
+        <div class="modal-content" style="box-shadow: 2px 3px 5px #999;">
             <div class="modal-header">
                 <h5 class="modal-title">Enroll Student</h5>
             </div>
