--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Instructors/Index.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Instructors/Index.cshtml
@@ -124,9 +124,9 @@
 </div>
 
 <!-- Update PW Modal -->
-<div class="modal fade" id="updatePasswordModal" tabindex="-1">
+<div class="modal fade bg-dark bg-opacity-50" id="updatePasswordModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content" style="border-color: brown; border-width: 3px">
+        <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Update Instructor Password</h5>
             </div>
