--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Students/Enroll.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Students/Enroll.cshtml
@@ -2,9 +2,9 @@
 @model EnrollStudentViewModel
 
 <!-- Enrollment Modal -->
-<div class="modal fade" id="enrollmentModal" tabindex="-1">
+<div class="modal fade bg-dark bg-opacity-50" id="enrollmentModal" tabindex="-1">
     <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable" role="document">
-        <div class="modal-content" style="box-shadow: 2px 3px 5px #999;">
+        <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Enroll Student</h5>
             </div>
@@ -72,9 +72,9 @@
     </div>
 </div>
 
-<div class="modal fade" id="schedulesModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+<div class="modal fade bg-dark bg-opacity-50" id="schedulesModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
     <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable" role="document">
-        <div class="modal-content" style="border-color: darkblue; border-width: 10px">
+        <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Available Schedules</h5>
             </div>
