--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Students/Index.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Students/Index.cshtml
@@ -212,9 +212,9 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="prevAcademicRecordModal" tabindex="-1">
+<div class="modal fade bg-dark bg-opacity-50" id="prevAcademicRecordModal" tabindex="-1">
     <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
-        <div class="modal-content" style="box-shadow: 2px 3px 5px #999;">
+        <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="prevAcademicRecordModalLabel">Academic Records</h5>
             </div>
@@ -222,39 +222,42 @@
                 <table id="prevAcadRecordListTable" class="table table-striped table-hover text-center">
                     <thead>
                         <tr>
+                            <th scope="col">Academic Year</th>
+                            <th scope="col">Semester</th>
                             <th scope="col">Subject Name</th>
                             <th scope="col">Rating</th>
-                            <th scope="col">Semester</th>
-                            <th scope="col">Academic Year</th>
-                            <th scope="col">Encoded By</th>
                             <th scope="col">Encoded Date</th>
-                            <th scope="col">Verified By</th>
+                            <th scope="col">Encoded By</th>
                             <th scope="col">Verified Date</th>
+                            <th scope="col">Verified By</th>
                         </tr>
                     </thead>
                     <tbody id="prevAcadRecordListTableBody">
-                        @foreach (var par in Model.AcademicRecords)
+                        @foreach(var par in Model.AcademicRecords)
                         {
                             <tr>
+                                <td>@par.AcademicYear</td>
+                                <td>@par.Semester</td>
                                 <td>@par.SubjectName</td>
                                 <td>@par.Rating</td>
-                                <td>@par.Semester</td>
-                                <td>@par.AcademicYear</td>
-                                <td>@par.EncodedBy</td>
                                 <td>@par.EncodedDate</td>
-                                <td>@par.VerifiedBy</td>
+                                <td>@par.EncodedBy</td>
                                 <td>@par.VerifiedDate</td>
+                                <td>@par.VerifiedBy</td>
                             </tr>
                         }
                     </tbody>
                 </table>
             </div>
             <div class="modal-footer">
-                @if(Model.AcademicRecords.Count > 0) 
+                @if(Model.AcademicRecords.Count > 0 && Model.Status == StudentStatuses.ForAssessment.Id) 
                 {
                     <button type="button" class="btn btn-primary" onclick="markStudentForEnrollment('@Model.Id', '@Model.Status')">Mark as Verified</button>
                 }
-                <button type="button" class="btn btn-primary" onclick="">Encode Grades</button>
+                @if(Model.Status == StudentStatuses.Pending.Id || Model.Status == StudentStatuses.ForAssessment.Id)
+                {
+                    <button type="button" class="btn btn-primary" onclick="openEncodeStudentGradesModal()">Encode Grades</button>
+                }
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
@@ -262,9 +265,9 @@
 </div>
 
 <!-- Update PW Modal -->
-<div class="modal fade" id="updatePasswordModal" tabindex="-1">
+<div class="modal fade bg-dark bg-opacity-50" id="updatePasswordModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content" style="box-shadow: 2px 3px 5px #999;">
+        <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Update Student Password</h5>
             </div>
@@ -284,6 +287,79 @@
             </div>
             <div class="modal-footer">
                 <button type="button" id="updatePasswordButton" class="btn btn-primary float-end" tabindex="-1" onclick="updateStudentPassword('@Model.Id')">Update</button>
+                <button type="button" class="btn btn-secondary float-end" data-bs-dismiss="modal" tabindex="-1">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Encode Student Grades Modal -->
+<div class="modal fade bg-dark bg-opacity-50" id="encodeStudentGradesModal" tabindex="-1">
+    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Encode Student Grades</h5>
+            </div>
+            <div class="modal-body">
+                <form id="encodeStudentGradeForm" onsubmit="addAcademicRecordToLocalList(event)">
+                    <div class="row gx-3 gy-3">
+                        <div class="col-lg-3 col-12">
+                            <label>Academic Year</label>
+                            <select class="form-select" id="academicRecordAcademicYear">
+                                <option value="2021-2022">2023-2024</option>
+                                <option value="2022-2023">2024-2025</option>
+                                <option value="2023-2024">2025-2026</option>
+                                <option value="2024-2025">2026-2027</option>
+                            </select>
+                        </div>
+                        <div class="col-lg-1 col-12">
+                            <label>Semester</label>
+                            <select class="form-select" id="academicRecordSemester">
+                                <option selected value="1st">1st</option>
+                                <option value="2nd">2nd</option>
+                            </select>
+                        </div>
+                        <div class="col-lg-4 col-12">
+                            <label>Subject</label>
+                            <select class="form-select" id="academicRecordSubject" onchange="onSubjectSelectChange()"
+                                asp-items="@(new SelectList(Model.AcademicRecordsSubjectsDropdownList, "Key", "Value"))">
+                            </select>
+                        </div>
+                        <div class="col-lg-4 col-12">
+                            <label>Other Subject Name</label>
+                            <input type="text" class="form-control" id="academicRecordOtherSubjName" disabled/>
+                        </div>
+                        <div class="col-lg-4 col-12">
+                            <label>Rating</label>
+                            <input type="number" class="form-control" id="academicRecordRating" required min="60" max="99" />
+                        </div>
+                        <div class="col-lg-4 col-12"></div>
+                        <div class="col-lg-2 col-12"></div>
+                        <div class="col-lg-2 col-12">
+                            @if (Model.Status != "PENDING")
+                            {
+                                <label>&nbsp;</label>
+                                <button type="submit" class="btn btn-primary form-control" tabindex="-1">Add</button>
+                            }
+                        </div>
+                    </div>
+                </form>
+                <table id="encodeStudentGradesTable" class="table table-striped table-hover text-center mt-5">
+                    <thead>
+                        <tr>
+                            <th scope="col">Academic Year</th>
+                            <th scope="col">Semester</th>
+                            <th scope="col">Subject Name</th>
+                            <th scope="col">Rating</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody id="encodeStudentGradesTableBody">
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary float-end" tabindex="-1" onclick="saveEncodedStudentGrades('@Model.Id')">Save</button>
                 <button type="button" class="btn btn-secondary float-end" data-bs-dismiss="modal" tabindex="-1">Cancel</button>
             </div>
         </div>
